# faiss-text-search

./: .gitignore  README.md  main.py  pyproject.toml
data/: sample.csv
utils/: utils.py
